--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -13,7 +13,7 @@
         android:text="Sample text"
         android:textSize="36dp"
         android:gravity="center"
-        android:padding="15dp"
+        android:padding="20dp"
         android:background="#bbdefb"
         android:textColor="#0288d1" />
 
@@ -22,8 +22,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/article_content"
         android:text="Article_string"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:textSize="18dp"/>
+        android:textSize="20sp"/>
+
 </RelativeLayout>
